Make sure OHTTP config gets reloaded on connectivity change if first attempt failed.
Categories
(Core :: Networking, defect, P1)
Tracking
()
People
(Reporter: valentin, Assigned: valentin)
References
(Blocks 1 open bug)
Details
(Whiteboard: [necko-triaged])
Attachments
(1 file, 1 obsolete file)
|
48 bytes,
text/x-phabricator-request
|
diannaS
:
approval-mozilla-beta+
|
Details | Review |
It's possible that when the OHTTPService is loaded the network request fails.
We want to ensure that we retry fetching the config when the network is back up.
| Assignee | ||
Comment 1•2 years ago
|
||
- Make sure the ObliviousHttpService clears the observers at shutdown
- Make the ObliviousHttpService reload the OHTTP config on connectivity change if first attempt failed
- Make the ObliviousHttpService reload the OHTTP config on TRR confirmation-fail if the first attempt failed
Comment 3•2 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 4•2 years ago
|
||
Comment 5•2 years ago
|
||
A patch has been attached on this bug, which was already closed. Filing a separate bug will ensure better tracking. If this was not by mistake and further action is needed, please alert the appropriate party. (Or: if the patch doesn't change behavior -- e.g. landing a test case, or fixing a typo -- then feel free to disregard this message)
Comment 6•2 years ago
|
||
Comment on attachment 9325124 [details]
Bug 1824091 - Also update TRR URI if network.trr.use_ohttp has changed r=#necko
Revision D173671 was moved to bug 1824723. Setting attachment 9325124 [details] to obsolete.
| Assignee | ||
Comment 7•2 years ago
|
||
Comment on attachment 9324633 [details]
Bug 1824091 - Make sure OHTTP config gets reloaded on connectivity change if first attempt failed. r=keeler!
Beta/Release Uplift Approval Request
- User impact if declined: If the channel to fetch the OHTTP config fails the next TRR requests would also fail, leading to DoH/TRR being unusable until restart.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This changeset only affects users who have the
network.trr.use_ohttppref set - which is not on by default. We intend to do an experiment with it soon which is why I am requesting uplift. - String changes made/needed:
- Is Android affected?: No
Comment 8•2 years ago
|
||
Comment on attachment 9324633 [details]
Bug 1824091 - Make sure OHTTP config gets reloaded on connectivity change if first attempt failed. r=keeler!
Approved for 112.0b9
Comment 9•2 years ago
|
||
| bugherder uplift | ||
Description
•