Bug 1824091 - Make sure OHTTP config gets reloaded on connectivity change if first attempt failed. r=keeler,necko-reviewers,kershaw

- Make sure the ObliviousHttpService clears the observers at shutdown
- Make the ObliviousHttpService reload the OHTTP config on connectivity change if first attempt failed
- Make the ObliviousHttpService reload the OHTTP config on TRR confirmation-fail if the first attempt failed

Differential Revision: https://phabricator.services.mozilla.com/D173412